Add new post about jekyII sitemap

--- a/_posts/2013-06-21-code-management.textile
+++ b/_posts/2013-06-21-code-management.textile
@@ -5,6 +5,13 @@ categories: management git
 tags: git
 ---
 
+关于项目中使用到的Git分枝管理模型。
+
+较之相对传统的CVS, SVN 或者Perforce等版本控制工具，Git在分枝管理上带来了很多新的理念。
+只有对这些概念有足够的认识，才能将其优点应用于项目。
+
+<!--more-->
+
 h1. 分枝模型
 
 *Git* 的分枝没有特别的使用要求，但其于个人理解及应用方式，我把常用分枝做了如下定义：
